# dotfiles

./: .bashrc  .gitignore  dosya_yolu.json  egitim_rehberi.md  kap_veri_cek.py  kap_veri_cek2.py  kap_veri_cek3.py  kur.sh
.github/: copilot-instructions.md
ag_network/: hotspot_acma.sh
bashrc.d/: 01-genel.sh  02-yazdir.sh  03-zamanlayici.sh
bashrc.d/borsa/: backtest_plani.md  cekirdek.sh  cekirdek_performans_analizi.md  db_baglam_bayragi.md  db_yazim_politikasi.md  fiyat_gecmisi_ohlcv_gecis_plani.md  lot_ayirma_plani.md  oturum_koruma_loglama_plani.md  plan.md  sistem_plani.md  tamamlama.sh  tarama_plani.md  veri_katmani.sh  veri_katmani_plani.md
bashrc.d/borsa/adaptorler/: info.ayarlar.sh  info.sh  osmanli.ayarlar.sh  osmanli.sh  plan.md  sablon.ayarlar.sh  sablon.sh  ziraat.ayarlar.sh  ziraat.sh
bashrc.d/borsa/backtest/: interaktif_backtest_plani.md  metrik.sh  motor.sh  portfoy.sh  rapor.sh  veri.sh  veri_dogrula.sh
bashrc.d/borsa/kurallar/: bist.sh
bashrc.d/borsa/robot/: motor.sh
bashrc.d/borsa/strateji/: GKD_FisherTransformV4_ML.py  bollinger.sh  ma_kesisim.sh  ornek.sh  ornek_ohlcv.sh  rsi.sh  test_al_sat.sh
bashrc.d/borsa/tarama/: _bist_sembol_listesi.py  _mum_birlestirici.py  _tvdatafeed_cagir.py  _tvdatafeed_canli.py  _tvdatafeed_main.py  (+11 more)
bashrc.d/mcp_sunucular/: __init__.py  pyproject.toml  sunucu.py  yardimcilar.py
bashrc.d/mcp_sunucular/araclar/: __init__.py  bist_araclari.py  borsa_araclari.py  borsa_backtest_araclari.py  borsa_gecmis_araclari.py  borsa_robot_araclari.py  borsa_veri_araclari.py  yazdir_araclari.py  zamanlayici_araclari.py
(+28 files in other folders)
